--- a/aboutme.html
+++ b/aboutme.html
@@ -3,8 +3,10 @@
 
 <h1>My First Heading</h1>
 <p>My first paragraph.</p>
-
+<p><b> all about me</b></p>
 </body>
 </html>
 
-
+<p><b> All About me</b></P>
+<html<
+<body>
