--- a/aboutme.html
+++ b/aboutme.html
@@ -1,10 +1,12 @@
+<!DOCTYPE html>
 <html>
 <body>
-
-<h1>My First Heading</h1>
-<p>My first paragraph.</p>
+<h1>Facheem Gustin</h1>
 <p><b> all about me</b></p>
 </body>
 </html>
-
-
+<h1 style="color:purple; my biography </h1
+<p>My name is Facheem  Gustin and I am a senior in high school. I was raised in Brooklyn, New York all my life. However, 10 years ago I used to live in New Jersey for 5 years. </p>
+ <html>
+ <body>
+<body style= "background-color:pink;">
