--- a/aboutme.html
+++ b/aboutme.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
 <html>
-<body>
+<body style= "background-color:pink">
 <h1>Facheem Gustin</h1>
 <p><b> all about me</b></p>
-</body>
+
+<h2 style="color:purple"> my biography </h2>
+<p>My name is Facheem  Gustin and I am a senior in high school. 
+ I was raised in Brooklyn, New York all my life. However, 10 years ago I used to live in New Jersey for 5 years. </p>
+<body 
+    </body>
 </html>
-<h1 style="color:purple; my biography </h1
-<p>My name is Facheem  Gustin and I am a senior in high school. I was raised in Brooklyn, New York all my life. However, 10 years ago I used to live in New Jersey for 5 years. </p>
- <html>
- <body>
-<body style= "background-color:pink;">
