--- a/aboutme.html
+++ b/aboutme.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html>
-<body style="background-color:pink">
+<body style="background-color:purple">
 <h1>Facheem Gustin</h1>
 <p><b> all about me</b></p>
 
