--- a/aboutme.html
+++ b/aboutme.html
@@ -3,9 +3,8 @@
 <body style="background-color:purple">
 <h1>Facheem Gustin</h1>
 <p><b> all about me</b></p>
-
 <h2 style="color:purple"> my biography </h2>
 <p>My name is Facheem  Gustin and I am a senior in high school. 
  I was raised in Brooklyn, New York all my life. However, 10 years ago I used to live in New Jersey for 5 years. </p>
- </body>
-</html>
+<h3> likes
+ <p> my likes are going shopping and 
