--- a/aboutme.html
+++ b/aboutme.html
@@ -6,10 +6,8 @@
 <h2 style="color:light purple"> my biography </h2>
 <p>My name is Facheem  Gustin and I am a senior in high school. 
  I was raised in Brooklyn, New York all my life. However, 10 years ago I used to live in New Jersey for 5 years. </p>
- <html>
-  <body>
 <h3>Likes:
  <p2>My likes are going shopping and reading wattpad on my spare time. I love to do makeup. That's one of the most things that interest me.
-  it makes me happy to see other people smile so that's what interest me in makeup.</p><p>
+  it makes me happy to see other people smile so that's what interest me in makeup.<br></p>
   <html>
    <body>
