--- a/aboutme.html
+++ b/aboutme.html
@@ -1,15 +1,28 @@
 <!DOCTYPE html>
 <html>
 <body style="background-color:purple">
+ 
+ 
+ 
 <h1>Facheem Gustin</h1>
 <p><b> all about me</b></p>
 <h2 style="color:light green"> my biography </h2>
 <p>My name is Facheem  Gustin and I am a senior in high school. 
  I was raised in Brooklyn, New York all my life. However, 10 years ago I used to live in New Jersey for 5 years. </p>
-<h3>Likes:<br></p>
+<h3>Likes:<br></h3>
  <p2>My likes are going shopping and reading wattpad on my spare time. I love to do makeup. That's one of the most things that interest me.
-  it makes me happy to see other people smile so that's what interest me in makeup.<br></p>
- <html>
-  <body>
-   <h4>Dislikes
-   <p3> My dislikes are Science. I really disklike science because I don't like to learn about chemicals and balancing equations.</p>
+  it makes me happy to see other people smile so that's what interest me in makeup.<br></p2>
+ <h4>Dislikes</h4>
+   <p3> My dislikes are Science. I really disklike science because I don't like to learn about chemicals and balancing equations.</p3>
+   
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+ </body>
+ </html>
