--- a/aboutme.html
+++ b/aboutme.html
@@ -10,10 +10,10 @@
 <p>My name is Facheem  Gustin and I am a senior in high school. 
  I was raised in Brooklyn, New York all my life. However, 10 years ago I used to live in New Jersey for 5 years. </p>
 <h3>Likes:<br></h3>
- <p2>My likes are going shopping and reading wattpad on my spare time. I love to do makeup. That's one of the most things that interest me.
-  it makes me happy to see other people smile so that's what interest me in makeup.<br></p2>
- <h4>Dislikes</h4>
-   <p3> My dislikes are Science. I really disklike science because I don't like to learn about chemicals and balancing equations.</p3>
+ <p>My likes are going shopping and reading wattpad on my spare time. I love to do makeup. That's one of the most things that interest me.
+  it makes me happy to see other people smile so that's what interest me in makeup.<br></p>
+ <h4>Dislikes<br></h4>
+   <p> My dislikes are Science. I really disklike science because I don't like to learn about chemicals and balancing equations.</p>
    
  
  
