--- a/aboutme.html
+++ b/aboutme.html
@@ -14,7 +14,7 @@
   it makes me happy to see other people smile so that's what interest me in makeup.<br></p>
  <h4>Dislikes<br></h4>
    <p> My dislikes are Science. I really disklike science because I don't like to learn about chemicals and balancing equations.</p>
-<ing scr="url"http://images6.fanpop.com/image/photos/37000000/Dot-Yakko-Wakko-animaniacs-37029050-984-852.jpg alt="animanics" 
+<ing scr="http://images6.fanpop.com/image/photos/37000000/Dot-Yakko-Wakko-animaniacs-37029050-984-852.jpg" alt="animanics" 
  
  
  
