--- a/aboutme.html
+++ b/aboutme.html
@@ -16,7 +16,7 @@
   it makes me happy to see other people smile so that's what interest me in makeup.<br></p>
  <h4>Dislikes<br></h4>
    <p> My dislikes are Science. I really disklike science because I don't like to learn about chemicals and balancing equations.</p>
-<img src=" http://images6.fanpop.com/image/photos/37000000/Dot-Yakko-Wakko-animaniacs-37029050-984-852.jpg" alt="animaics" style="width:304px;height:228px;">
+<img src= "animanics.jpg" alt="animaics" style="width:304px;height:228px;">
 
  
  
