--- a/aboutme.html
+++ b/aboutme.html
@@ -1,4 +1,4 @@
-
+!
 
 <!DOCTYPE html>
 <html>
@@ -18,9 +18,9 @@
    <p> My dislikes are Science. I really disklike science because I don't like to learn about chemicals and balancing equations.</p>
 <img src= "animanics.jpg" alt="animaics" style="width:304px;height:228px;">
  <h4> fun facts:
-   <li>when I was in elementry I never liked social studiesz until I met an amazing teacher named Ms.Cobb that made me love it</li>
-   <li>I don't have a middle name</li>
-   <li>My zodiac sign is a CANCER!!!!! so YES I may be emotional sometimes BUT I'm not a CRYBABY!!!!!</li>
+   <li>1.  when I was in elementry I never liked social studiesz until I met an amazing teacher named Ms.Cobb that made me love it</li>
+   <li>2. I don't have a middle name</li>
+   <li>3. My zodiac sign is a CANCER!!!!! so YES I may be emotional sometimes BUT I'm not a CRYBABY!!!!!</li>
 
  
  
