--- a/aboutme.html
+++ b/aboutme.html
@@ -21,7 +21,7 @@
    <li>  when I was in elementry I never liked social studiesz until I met an amazing teacher named Ms.Cobb that made me love it</li>
    <li> I don't have a middle name</li>
    <li>  My zodiac sign is a CANCER!!!!! so YES I may be emotional sometimes BUT I'm not a CRYBABY!!!!!</li>
-
+<img src= keepcalm" alt="keepcalm" style="width:304px;height:228px;">
  
  
  
