--- a/aboutme.html
+++ b/aboutme.html
@@ -2,11 +2,12 @@
 
 <!DOCTYPE html>
 <html>
-<body style="background-color:purple">
- 
- 
- 
+<body style="background-color:purple"> 
 <h1>Facheem Gustin</h1>
+ </head>
+ <body>
+  <button onclick="Hi my readers()">Click here to be informed!!!</button>
+  <script
 <p><b> all about me</b></p>
 <h2 style="color:light green"> my biography </h2>
 <p>My name is Facheem  Gustin and I am a senior in high school. 
@@ -31,3 +32,4 @@
  
  </body>
  </html>
+"''
