--- a/aboutme.html
+++ b/aboutme.html
@@ -1,13 +1,13 @@
-""!
-
 <!DOCTYPE html>
 <html>
 <body style="background-color:purple"> 
 <h1>Facheem Gustin</h1>
  </head>
  <body>
+  <script>
   <button onclick="Hi my readers()">Click here to be informed!!!</button>
-  <script
+  </script>
+   function
 <p><b> all about me</b></p>
 <h2 style="color:light green"> my biography </h2>
 <p>My name is Facheem  Gustin and I am a senior in high school. 
