--- a/button.html
+++ b/button.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 
 <html>
@@ -10,5 +11,17 @@
  <body>
 
 <a href="aboutme.html" class="button">Click here to be informed!!!</a>
+   background-color: #4CAF50; /* PinK */
+    border: none;
+    color: Pink;
+    padding: 15px 32px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 16px;
+} 
+  
+  
+  
 
 </html>
