--- a/button.html
+++ b/button.html
@@ -11,17 +11,12 @@
  <body>
 
 <a href="aboutme.html" class="button">Click here to be informed!!!</a>
-   background-color: #4CAF50; /* PinK */
-    border: none;
-    color: Pink;
-    padding: 15px 32px;
-    text-align: center;
-    text-decoration: none;
-    display: inline-block;
-    font-size: 16px;
-} 
-  
-  
+   .button1 {
+    background-color: white;
+    color: black;
+    border: 2px solid #4CAF50; /* Green */
+}
+... 
   
 
 </html>
