--- a/button.html
+++ b/button.html
@@ -11,12 +11,11 @@
  <body>
 
 <a href="aboutme.html" class="button">Click here to be informed!!!</a>
-   .button1 {
+   .button1 {"click here to be informed}
     background-color: white;
     color: black;
     border: 2px solid #4CAF50; /* Green */
-}
-... 
+
   
 
 </html>
