--- a/button.html
+++ b/button.html
@@ -1,4 +1,5 @@
 
+
 <!DOCTYPE html>
 
 <html>
@@ -10,7 +11,18 @@
  </head>
  <body>
 
-<a href="aboutme.html" class="button">Click here to be informed!!!</a>
+<a href="aboutme.html" class="button">Click here to be informed!!!
+  button1 {"click here to be informed}
+
+    background-color: white;
+
+    color: black;
+
+    border: 2px solid #4CAF50; /* Green */
+
+  
+  
+  </a>
    .button1 {"click here to be informed}
     background-color: white;
     color: black;
