--- a/button.html
+++ b/button.html
@@ -4,30 +4,15 @@
 
 <html>
 
-<body style="background-color:light blue"> 
+<body style="background-color:blue"> 
 
 <h1>Facheem Gustin</h1>
 
  </head>
  <body>
 
-<a href="aboutme.html" class="button">Click here to be informed!!!
-  button1 {"click here to be informed}
-
-    background-color: white;
-
-    color: black;
-
-    border: 2px solid #4CAF50; /* Green */
-
-  
-  
-  </a>
-   .button1 {"click here to be informed}
-    background-color: white;
-    color: black;
-    border: 2px solid #4CAF50; /* Green */
-
+<a href="aboutme.html" class="button">Click here to be informed!!! </a>
+   
   
 
 </html>
