--- a/aboutme.html
+++ b/aboutme.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html>
-<body style="background-color:purple"> 
+<body style="background-color:green"> 
 <h1>Facheem Gustin</h1>
  </head>
  <body>
