--- a/aboutme.html
+++ b/aboutme.html
@@ -6,7 +6,11 @@
  <body>
 
 <p><b> all about me</b></p>
-<h2 style="color:light green"> my biography </h2>
+ background-image: url(Bunny.png), url(Bunny.png)i;
+    background-position: right bottom, left top;
+    background-repeat: no-repeat, repeat;
+
+
 <p>My name is Facheem  Gustin and I am a senior in high school. 
  I was raised in Brooklyn, New York all my life. However, 10 years ago I used to live in New Jersey for 5 years. </p>
 <h3>Likes:<br></h3>
@@ -20,8 +24,8 @@
    <li> I don't have a middle name</li>
    <li>  My zodiac sign is a CANCER!!!!! so YES I may be emotional sometimes BUT I'm not a CRYBABY!!!!!</li>
 <img src= "Keeppcalm.png" alt="Keeppcalm" style="width:304px;height:228px;">
-  
- 
+  <h5> My favorite Websites,<h/5>
+ <p>
  
  
  
