--- a/aboutme.html
+++ b/aboutme.html
@@ -6,9 +6,9 @@
  <body>
 
 <p><b> all about me</b></p>
- background-image: url(Bunny.png), url(Bunny.png)i;
-    background-position: right bottom, left top;
-    background-repeat: no-repeat, repeat;
+ background-image: url(Bunny.png), url(Bunny.png);
+  background-position: right bottom, left top;
+  background-repeat: no-repeat, repeat;
 
 
 <p>My name is Facheem  Gustin and I am a senior in high school. 
