--- a/aboutme.html
+++ b/aboutme.html
@@ -5,10 +5,10 @@
  <body>
 
 <p><b> all about me</b></p>
- background-image: url(Bunny.png), url(Bunny.png);
+<style type "text/css">background-image: url(Bunny.png), url(Bunny.png);
   background-position: right bottom, left top;
   background-repeat: no-repeat, repeat;
-
+<style/>
 
 <p>My name is Facheem  Gustin and I am a senior in high school. 
  I was raised in Brooklyn, New York all my life. However, 10 years ago I used to live in New Jersey for 5 years. </p>
