--- a/aboutme.html
+++ b/aboutme.html
@@ -4,11 +4,11 @@
  </head>
 
 <p><b> all about me</b></p>
-<style type "text/css">background-image: url(Bunny.png), url(Bunny.png);
+<style> 
   background-position: right bottom, left top;
   background-repeat: no-repeat, repeat;
 <style/>
- <body>
+ <body style="background-image:url(http://img00.deviantart.net/b796/i/2011/165/8/9/pink_bunny_wallpaper_by_msexecutive-d3ixaqy.png)>
 <p>My name is Facheem  Gustin and I am a senior in high school. 
  I was raised in Brooklyn, New York all my life. However, 10 years ago I used to live in New Jersey for 5 years. </p>
 <h3>Likes:<br></h3>
