--- a/aboutme.html
+++ b/aboutme.html
@@ -22,8 +22,11 @@
    <li> I don't have a middle name</li>
    <li>  My zodiac sign is a CANCER!!!!! so YES I may be emotional sometimes BUT I'm not a CRYBABY!!!!!</li>
 <img src= "Keeppcalm.png" alt="Keeppcalm" style="width:304px;height:228px;">
-  <h5> My favorite Websites,<h/5>
- <p>
+  <h5> My favorite Website
+ <li> www.youtube.com
+  <li>www.h&m.com
+   <li>www.forever21.com
+  
  
  
  
